# Database-Editor

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/http_client/: dialogtoadd.cpp  dialogtoadd.ui  helpers.cpp  logger.cpp  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mynetworkclass.cpp
client/src/http_client/config/: config.ini
client/src/http_client/include/: dialogtoadd.h  helpers.h  logger.h  logindialog.h  mainwindow.h  mynetworkclass.h
server/: CMakeLists.txt
server/src/http_server/: httpserver.cpp  logger.cpp  main.cpp
server/src/http_server/config/: config.ini
server/src/http_server/include/: httpserver.h
server/test/: testServer.cpp
